calculator v1.0 (without redux state)

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: #d5d5d5;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+
+.App {
+  width: 350px;
+  height: 500px;
+  background-color: #F6F7FC;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.cons {
+  width: 100%;
+  height: 100px;
+  text-align: right;
+}
+
+.formula {
+  font-weight: 300;
+  min-height: 35px;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+}
+
+.display {
+  height: 35px;
+  font-family: "Roboto", sans-serif;
+  font-size: 28px;
+}
+
+.pad {
+  width: 100%;
+  height: 380px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+}
+
+.pad button {
+  display: block;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+}
+
+.pad button:hover {
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.pad button:active {
+  transform: translateY(2px);
+  box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+#clear {
+  grid-column: 1 / 3;
+  background-color: #93A3F3;
+}
+
+#divide, #multiply, #subtract, #add {
+  background-color: #93A3F3;
+}
+
+#equals {
+  grid-column: 4 / 5;
+  grid-row: 4 / 6;
+  background-color: #93A3F3;
+}
+
+#zero {
+  grid-column: 1 / 3;
 }
